2013-11-11  Tristan Gingold  <gingold@adacore.com>
	    Eric Botcazou  <ebotcazou@adacore.com>

	* tree.h (CONSTRUCTOR_NO_CLEARING): Define.
	* tree-core.h (CONSTRUCTOR_NO_CLEARING): Document it.
	* tree.def (CONSTRUCTOR): Likewise.
	* doc/generic.texi (CONSTRUCTOR): Likewise.  Update description.
	* gimplify.c (gimplify_init_constructor): Do not clear the object when
	the constructor is incomplete and CONSTRUCTOR_NO_CLEARING is set.

2013-11-11  Basile Starynkevitch  <basile@starynkevitch.net>

	* toplev.c (toplev_main): Move PLUGIN_FINISH invocation before
	diagnostic_finish.

2013-11-11  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm.c (arm_new_rtx_costs): Return after handling
	comparisons.

2013-11-11  Joern Rennecke  <joern.rennecke@embecosm.com>

	* config/arc/arc.h (LOGICAL_OP_NON_SHORT_CIRCUIT): Define.

2013-11-08  Jeff Law  <law@redhat.com>

	* tree-ssa-threadupdate.c (mark_threaded_blocks): Truncate jump
	threading paths first, then perform PHI node checks if applicable.

2013-11-10  Karlson2k  <k2k@narod.ru>
            Kai Tietz  <ktietz@redhat.com>

	PR plugin/52872
	* configure.ac: Adding for exported symbols check
	and for rdynamic-check executable-extension.
	* configure: Regenerated.

2013-11-10  Uros Bizjak  <ubizjak@gmail.com>

	* mode-switching.c (optimize_mode_switching): Mark block as
	nontransparent, if last_mode at block exit is different from no_mode.

2013-11-09  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* function.c (NAME__MAIN): Move to...
	* cfgexpand.c (NAME__MAIN): ...here.

2013-11-09  Richard Sandiford  <rdsandiford@googlemail.com>

	* target.def (can_use_doloop_p): New hook.
	* doc/tm.texi.in (TARGET_CAN_USE_DOLOOP_P): Add.
	* doc/tm.texi: Regenerate.
	* doc/md.texi (doloop_begin, doloop_end): Update documentation.
	* hooks.h (hook_bool_dint_dint_uint_true): Declare.
	* hooks.c (hook_bool_dint_dint_uint_true): New function.
	* targhooks.h (can_use_doloop_if_innermost): Declare.