@@ -1,3 +1,8 @@
+2013-11-11  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	PR middle-end/59049
+	* expmed.c (emit_store_flag): Fail for const-const comparison.
+
 2013-11-11  Tristan Gingold  <gingold@adacore.com>
 	    Eric Botcazou  <ebotcazou@adacore.com>
 
